modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allowed-flex-volumes.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowedflexvolumes
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "List of allowed flex volume drivers"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Controls the allowlist of FlexVolume drivers. Corresponds to the
      `allowedFlexVolumes` field in PodSecurityPolicy. For more information,
      see
      https://kubernetes.io/docs/concepts/policy/pod-security-policy/#flexvolume-drivers
spec:
  crd:
    spec:
      names:
        kind: D8AllowedFlexVolumes
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          description: >-
            Controls the allowlist of FlexVolume drivers. Corresponds to the
            `allowedFlexVolumes` field in PodSecurityPolicy. For more information,see
            https://kubernetes.io/docs/concepts/policy/pod-security-policy/#flexvolume-drivers
          properties:
            allowedFlexVolumes:
              type: array
              description: "An array of AllowedFlexVolume objects."
              items:
                type: object
                properties:
                  driver:
                    description: "The name of the FlexVolume driver."
                    type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.check_set" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.exception.spe" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.match" . | nindent 16 }}
            rego: |
              package d8.security_policies

              import data.lib.check_set.check_value_in_set_with_wildcards
              import data.lib.common.has_field
              import data.lib.common.pod_spec
              import data.lib.common.review_kind

              violation contains {"msg": msg, "details": {}} if {
                not input.review.operation == "DELETE"
                volume := input_flexvolumes[_]
                allowed := [v.driver | v := input.parameters.allowedFlexVolumes[_]]
                result := check_value_in_set_with_wildcards(volume.flexVolume.driver, allowed, [], {})
                not result.allowed
                msg := sprintf("FlexVolume %v is not allowed, %v: %v. Allowed drivers: %v", [volume, review_kind, input.review.object.metadata.name, input.parameters.allowedFlexVolumes])
              }

              input_flexvolumes contains v if {
                v := pod_spec.volumes[_]
                has_field(v, "flexVolume")
              }
