modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-flex-volumes/test_samples/security_policy/002-disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-flex-volumes
  namespace: testns
  labels:
    app: nginx-flex-volumes
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /cache
          name: demo-vol
  volumes:
    - name: demo-vol
      flexVolume:
        driver: "volume.sh/lvm"
