modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-flex-volumes/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-volume-types
tests:
- name: security-policy
  template: ../../templates/security/allowed-flex-volumes.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 001-example-allowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy/001-allowed.yaml
    assertions:
    - violations: no
  - name: 002-example-disallowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy/002-disallowed.yaml
    assertions:
    - violations: yes
